--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lecturer-dashboard",
+  "name": "student-dashboard",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -20,8 +20,8 @@
     "@types/react": "^18.2.46",
     "@types/react-dom": "^18.2.18",
     "autoprefixer": "^10.4.16",
-    "eslint": "^9.39.2",
-    "eslint-config-next": "16.1.5",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.0.4",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.4.0",
     "typescript": "^5.3.3"
